LiverpoolRummy/main/default/objects/Player_for_Game__c/Player_for_Game__c.object-meta.xml
<CustomObject>
    <description>A player that participated in this game.</description>
    <label>Player for Game</label>
    <nameField>
        <displayFormat>Player Game {0000000000}</displayFormat>
        <label>Players for Game Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Players for Game</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>