LiverpoolRummy/main/default/objects/Player_for_Game__c/fields/Player__c.field-meta.xml
<CustomField>
    <fullName>Player__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Player</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Games</relationshipLabel>
    <relationshipName>Players_for_Game</relationshipName>
    <type>Lookup</type>
</CustomField>