LiverpoolRummy/main/default/objects/Player_for_Game__c/fields/Score__c.field-meta.xml
<CustomField>
    <fullName>Score__c</fullName>
    <description>The player&apos;s score for this game</description>
    <inlineHelpText>The player&apos;s score for this game</inlineHelpText>
    <label>Score</label>
    <summarizedField>Player_s_Hand_for_Game__c.Points__c</summarizedField>
    <summaryForeignKey>Player_s_Hand_for_Game__c.Player_for_Game__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>